// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelDetail Container renders the details pane 1`] = `
<div
  className="model-details"
>
  <InfoPanel>
    <div
      className="info-panel"
    >
      <div
        className="info-panel__grid"
      >
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Model
          </h4>
          <p
            data-name="name"
          >
            group-test
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Region
          </h4>
          <p
            data-name="region"
          >
            us-central1
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Controller
          </h4>
          <p
            data-name="controller"
          >
            iaas
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Cloud
          </h4>
          <p
            data-name="cloud"
          >
            cloud-google
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            SLA
          </h4>
          <p
            data-name="sla"
          >
            unsupported
          </p>
        </div>
      </div>
      <img
        alt=""
        src="https://assets.ubuntu.com/v1/f3f75945-home-promo-bundle.svg"
      />
    </div>
  </InfoPanel>
  <div
    className="model-details__main"
  >
    <div
      className="model-details__filters"
    >
      <Filter
        filters={
          Array [
            "all",
            "apps",
            "units",
            "machines",
            "relations",
          ]
        }
        label="View"
      >
        <div
          className="p-filter"
        >
          <span
            className="p-filter__label"
          >
            View
          </span>
          <span
            className="p-filter__item 1"
            key="all"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                all
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="apps"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                apps
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="units"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                units
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="machines"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                machines
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="relations"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                relations
              </button>
            </Button>
          </span>
        </div>
      </Filter>
      <Filter
        filters={
          Array [
            "all",
            "maintenance",
            "blocked",
          ]
        }
        label="Status"
      >
        <div
          className="p-filter"
        >
          <span
            className="p-filter__label"
          >
            Status
          </span>
          <span
            className="p-filter__item 1"
            key="all"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                all
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="maintenance"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                maintenance
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="blocked"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                blocked
              </button>
            </Button>
          </span>
        </div>
      </Filter>
    </div>
    <MainTable
      headers={
        Array [
          Object {
            "content": "app",
          },
          Object {
            "content": "status",
          },
          Object {
            "content": "version",
          },
          Object {
            "className": "u-align--right",
            "content": "scale",
          },
          Object {
            "content": "store",
          },
          Object {
            "className": "u-align--right",
            "content": "rev",
          },
          Object {
            "content": "os",
          },
          Object {
            "content": "notes",
          },
        ]
      }
      rows={
        Array [
          Object {
            "columns": Array [
              Object {
                "content": "easyrsa",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "elasticsearch",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "etcd",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "flannel",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kibana",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubeapi-load-balancer",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubernetes-master",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubernetes-worker",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "rsyslog",
              },
              Object {
                "content": "waiting",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
        ]
      }
      sortable={true}
    >
      <Table
        sortable={true}
      >
        <table
          className="p-table--sortable"
          role="grid"
        >
          <thead>
            <TableRow>
              <tr>
                <TableHeader
                  key="0"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    app
                  </th>
                </TableHeader>
                <TableHeader
                  key="1"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    status
                  </th>
                </TableHeader>
                <TableHeader
                  key="2"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    version
                  </th>
                </TableHeader>
                <TableHeader
                  className="u-align--right"
                  key="3"
                  onClick={[Function]}
                >
                  <th
                    className="u-align--right"
                    onClick={[Function]}
                  >
                    scale
                  </th>
                </TableHeader>
                <TableHeader
                  key="4"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    store
                  </th>
                </TableHeader>
                <TableHeader
                  className="u-align--right"
                  key="5"
                  onClick={[Function]}
                >
                  <th
                    className="u-align--right"
                    onClick={[Function]}
                  >
                    rev
                  </th>
                </TableHeader>
                <TableHeader
                  key="6"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    os
                  </th>
                </TableHeader>
                <TableHeader
                  key="7"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    notes
                  </th>
                </TableHeader>
              </tr>
            </TableRow>
          </thead>
          <tbody>
            <TableRow
              key="0"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    easyrsa
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="1"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    elasticsearch
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="2"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="3"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    flannel
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="4"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kibana
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="5"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubeapi-load-balancer
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="6"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="7"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-worker
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="8"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    rsyslog
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    waiting
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </Table>
    </MainTable>
    <MainTable
      headers={
        Array [
          Object {
            "content": "unit",
          },
          Object {
            "content": "workload",
          },
          Object {
            "content": "agent",
          },
          Object {
            "content": "machine",
          },
          Object {
            "content": "public address",
          },
          Object {
            "content": "port",
          },
          Object {
            "content": "message",
          },
        ]
      }
      rows={Array []}
      sortable={true}
    >
      <Table
        sortable={true}
      >
        <table
          className="p-table--sortable"
          role="grid"
        >
          <thead>
            <TableRow>
              <tr>
                <TableHeader
                  key="0"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    unit
                  </th>
                </TableHeader>
                <TableHeader
                  key="1"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    workload
                  </th>
                </TableHeader>
                <TableHeader
                  key="2"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    agent
                  </th>
                </TableHeader>
                <TableHeader
                  key="3"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    machine
                  </th>
                </TableHeader>
                <TableHeader
                  key="4"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    public address
                  </th>
                </TableHeader>
                <TableHeader
                  key="5"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    port
                  </th>
                </TableHeader>
                <TableHeader
                  key="6"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    message
                  </th>
                </TableHeader>
              </tr>
            </TableRow>
          </thead>
          <tbody />
        </table>
      </Table>
    </MainTable>
    <MainTable
      headers={
        Array [
          Object {
            "content": "relation provider",
          },
          Object {
            "content": "requirer",
          },
          Object {
            "content": "interface",
          },
          Object {
            "content": "type",
          },
          Object {
            "content": "message",
          },
        ]
      }
      rows={
        Array [
          Object {
            "columns": Array [
              Object {
                "content": "elasticsearch:peer",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "http",
              },
              Object {
                "content": "peer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "elasticsearch:client",
              },
              Object {
                "content": "kibana:rest",
              },
              Object {
                "content": "elasticsearch",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "etcd:cluster",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "etcd",
              },
              Object {
                "content": "peer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "etcd:db",
              },
              Object {
                "content": "flannel:etcd",
              },
              Object {
                "content": "etcd",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "easyrsa:client",
              },
              Object {
                "content": "etcd:certificates",
              },
              Object {
                "content": "tls-certificates",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "etcd:db",
              },
              Object {
                "content": "kubernetes-master:etcd",
              },
              Object {
                "content": "etcd",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "easyrsa:client",
              },
              Object {
                "content": "kubeapi-load-balancer:certificates",
              },
              Object {
                "content": "tls-certificates",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubeapi-load-balancer:loadbalancer",
              },
              Object {
                "content": "kubernetes-master:loadbalancer",
              },
              Object {
                "content": "public-address",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubernetes-master:kube-api-endpoint",
              },
              Object {
                "content": "kubeapi-load-balancer:apiserver",
              },
              Object {
                "content": "http",
              },
              Object {
                "content": "provider",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubeapi-load-balancer:website",
              },
              Object {
                "content": "kubernetes-worker:kube-api-endpoint",
              },
              Object {
                "content": "http",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "easyrsa:client",
              },
              Object {
                "content": "kubernetes-master:certificates",
              },
              Object {
                "content": "tls-certificates",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "easyrsa:client",
              },
              Object {
                "content": "kubernetes-worker:certificates",
              },
              Object {
                "content": "tls-certificates",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubernetes-master:cni",
              },
              Object {
                "content": "flannel:cni",
              },
              Object {
                "content": "kubernetes-cni",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubernetes-worker:cni",
              },
              Object {
                "content": "flannel:cni",
              },
              Object {
                "content": "kubernetes-cni",
              },
              Object {
                "content": "requirer",
              },
              Object {
                "content": "joining",
              },
            ],
          },
          Object {
            "columns": Array [
              Object {
                "content": "kubernetes-master:kube-control",
              },
              Object {
                "content": "kubernetes-worker:kube-control",
              },
              Object {
                "content": "kube-control",
              },
              Object {
                "content": "provider",
              },
              Object {
                "content": "joining",
              },
            ],
          },
        ]
      }
      sortable={true}
    >
      <Table
        sortable={true}
      >
        <table
          className="p-table--sortable"
          role="grid"
        >
          <thead>
            <TableRow>
              <tr>
                <TableHeader
                  key="0"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    relation provider
                  </th>
                </TableHeader>
                <TableHeader
                  key="1"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    requirer
                  </th>
                </TableHeader>
                <TableHeader
                  key="2"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    interface
                  </th>
                </TableHeader>
                <TableHeader
                  key="3"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    type
                  </th>
                </TableHeader>
                <TableHeader
                  key="4"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    message
                  </th>
                </TableHeader>
              </tr>
            </TableRow>
          </thead>
          <tbody>
            <TableRow
              key="0"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    elasticsearch:peer
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    http
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    peer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="1"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    elasticsearch:client
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kibana:rest
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    elasticsearch
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="2"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd:cluster
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    peer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="3"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd:db
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    flannel:etcd
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="4"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    easyrsa:client
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd:certificates
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    tls-certificates
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="5"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd:db
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master:etcd
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    etcd
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="6"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    easyrsa:client
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubeapi-load-balancer:certificates
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    tls-certificates
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="7"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubeapi-load-balancer:loadbalancer
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master:loadbalancer
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    public-address
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="8"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master:kube-api-endpoint
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubeapi-load-balancer:apiserver
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    http
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    provider
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="9"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubeapi-load-balancer:website
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-worker:kube-api-endpoint
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    http
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="10"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    easyrsa:client
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master:certificates
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    tls-certificates
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="11"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    easyrsa:client
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-worker:certificates
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    tls-certificates
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="12"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master:cni
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    flannel:cni
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-cni
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="13"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-worker:cni
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    flannel:cni
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-cni
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    requirer
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              key="14"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-master:kube-control
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kubernetes-worker:kube-control
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    kube-control
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    provider
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    joining
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </Table>
    </MainTable>
  </div>
</div>
`;

exports[`ModelDetail Container renders the details pane for models shared-with-me 1`] = `
<div
  className="model-details"
>
  <InfoPanel>
    <div
      className="info-panel"
    >
      <div
        className="info-panel__grid"
      >
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Model
          </h4>
          <p
            data-name="name"
          >
            frontend-ci
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Region
          </h4>
          <p
            data-name="region"
          >
            us-east1
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Controller
          </h4>
          <p
            data-name="controller"
          >
            iaas
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            Cloud
          </h4>
          <p
            data-name="cloud"
          >
            cloud-google
          </p>
        </div>
        <div
          className="info-panel__grid-item"
        >
          <h4
            className="p-muted-heading"
          >
            SLA
          </h4>
          <p
            data-name="sla"
          >
            unsupported
          </p>
        </div>
      </div>
      <img
        alt=""
        src="https://assets.ubuntu.com/v1/f3f75945-home-promo-bundle.svg"
      />
    </div>
  </InfoPanel>
  <div
    className="model-details__main"
  >
    <div
      className="model-details__filters"
    >
      <Filter
        filters={
          Array [
            "all",
            "apps",
            "units",
            "machines",
            "relations",
          ]
        }
        label="View"
      >
        <div
          className="p-filter"
        >
          <span
            className="p-filter__label"
          >
            View
          </span>
          <span
            className="p-filter__item 1"
            key="all"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                all
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="apps"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                apps
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="units"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                units
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="machines"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                machines
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="relations"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                relations
              </button>
            </Button>
          </span>
        </div>
      </Filter>
      <Filter
        filters={
          Array [
            "all",
            "maintenance",
            "blocked",
          ]
        }
        label="Status"
      >
        <div
          className="p-filter"
        >
          <span
            className="p-filter__label"
          >
            Status
          </span>
          <span
            className="p-filter__item 1"
            key="all"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                all
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="maintenance"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                maintenance
              </button>
            </Button>
          </span>
          <span
            className="p-filter__item 1"
            key="blocked"
          >
            <Button
              onClick={[Function]}
            >
              <button
                className="p-button--filter"
                onClick={[Function]}
              >
                blocked
              </button>
            </Button>
          </span>
        </div>
      </Filter>
    </div>
    <MainTable
      headers={
        Array [
          Object {
            "content": "app",
          },
          Object {
            "content": "status",
          },
          Object {
            "content": "version",
          },
          Object {
            "className": "u-align--right",
            "content": "scale",
          },
          Object {
            "content": "store",
          },
          Object {
            "className": "u-align--right",
            "content": "rev",
          },
          Object {
            "content": "os",
          },
          Object {
            "content": "notes",
          },
        ]
      }
      rows={
        Array [
          Object {
            "columns": Array [
              Object {
                "content": "jenkins",
              },
              Object {
                "content": "unknown",
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "CharmHub",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "-",
              },
              Object {
                "content": "-",
              },
            ],
          },
        ]
      }
      sortable={true}
    >
      <Table
        sortable={true}
      >
        <table
          className="p-table--sortable"
          role="grid"
        >
          <thead>
            <TableRow>
              <tr>
                <TableHeader
                  key="0"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    app
                  </th>
                </TableHeader>
                <TableHeader
                  key="1"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    status
                  </th>
                </TableHeader>
                <TableHeader
                  key="2"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    version
                  </th>
                </TableHeader>
                <TableHeader
                  className="u-align--right"
                  key="3"
                  onClick={[Function]}
                >
                  <th
                    className="u-align--right"
                    onClick={[Function]}
                  >
                    scale
                  </th>
                </TableHeader>
                <TableHeader
                  key="4"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    store
                  </th>
                </TableHeader>
                <TableHeader
                  className="u-align--right"
                  key="5"
                  onClick={[Function]}
                >
                  <th
                    className="u-align--right"
                    onClick={[Function]}
                  >
                    rev
                  </th>
                </TableHeader>
                <TableHeader
                  key="6"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    os
                  </th>
                </TableHeader>
                <TableHeader
                  key="7"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    notes
                  </th>
                </TableHeader>
              </tr>
            </TableRow>
          </thead>
          <tbody>
            <TableRow
              key="0"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    jenkins
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    unknown
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    CharmHub
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    -
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </Table>
    </MainTable>
    <MainTable
      headers={
        Array [
          Object {
            "content": "unit",
          },
          Object {
            "content": "workload",
          },
          Object {
            "content": "agent",
          },
          Object {
            "content": "machine",
          },
          Object {
            "content": "public address",
          },
          Object {
            "content": "port",
          },
          Object {
            "content": "message",
          },
        ]
      }
      rows={
        Array [
          Object {
            "columns": Array [
              Object {
                "content": "jenkins/2",
              },
              Object {
                "content": "unknown",
              },
              Object {
                "content": "lost",
              },
              Object {
                "content": "2",
              },
              Object {
                "content": "104.196.205.152",
              },
              Object {
                "content": undefined,
              },
              Object {
                "content": "agent lost, see 'juju show-status-log jenkins/2'",
              },
            ],
          },
        ]
      }
      sortable={true}
    >
      <Table
        sortable={true}
      >
        <table
          className="p-table--sortable"
          role="grid"
        >
          <thead>
            <TableRow>
              <tr>
                <TableHeader
                  key="0"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    unit
                  </th>
                </TableHeader>
                <TableHeader
                  key="1"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    workload
                  </th>
                </TableHeader>
                <TableHeader
                  key="2"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    agent
                  </th>
                </TableHeader>
                <TableHeader
                  key="3"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    machine
                  </th>
                </TableHeader>
                <TableHeader
                  key="4"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    public address
                  </th>
                </TableHeader>
                <TableHeader
                  key="5"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    port
                  </th>
                </TableHeader>
                <TableHeader
                  key="6"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    message
                  </th>
                </TableHeader>
              </tr>
            </TableRow>
          </thead>
          <tbody>
            <TableRow
              key="0"
            >
              <tr>
                <TableCell
                  key="0"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    jenkins/2
                  </td>
                </TableCell>
                <TableCell
                  key="1"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    unknown
                  </td>
                </TableCell>
                <TableCell
                  key="2"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    lost
                  </td>
                </TableCell>
                <TableCell
                  key="3"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    2
                  </td>
                </TableCell>
                <TableCell
                  key="4"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    104.196.205.152
                  </td>
                </TableCell>
                <TableCell
                  key="5"
                >
                  <td
                    className=""
                    role="gridcell"
                  />
                </TableCell>
                <TableCell
                  key="6"
                >
                  <td
                    className=""
                    role="gridcell"
                  >
                    agent lost, see 'juju show-status-log jenkins/2'
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </Table>
    </MainTable>
    <MainTable
      headers={
        Array [
          Object {
            "content": "relation provider",
          },
          Object {
            "content": "requirer",
          },
          Object {
            "content": "interface",
          },
          Object {
            "content": "type",
          },
          Object {
            "content": "message",
          },
        ]
      }
      rows={Array []}
      sortable={true}
    >
      <Table
        sortable={true}
      >
        <table
          className="p-table--sortable"
          role="grid"
        >
          <thead>
            <TableRow>
              <tr>
                <TableHeader
                  key="0"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    relation provider
                  </th>
                </TableHeader>
                <TableHeader
                  key="1"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    requirer
                  </th>
                </TableHeader>
                <TableHeader
                  key="2"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    interface
                  </th>
                </TableHeader>
                <TableHeader
                  key="3"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    type
                  </th>
                </TableHeader>
                <TableHeader
                  key="4"
                  onClick={[Function]}
                >
                  <th
                    onClick={[Function]}
                  >
                    message
                  </th>
                </TableHeader>
              </tr>
            </TableRow>
          </thead>
          <tbody />
        </table>
      </Table>
    </MainTable>
  </div>
</div>
`;

exports[`ModelDetail Container renders the terminal 1`] = `
<Terminal
  address="wss://shell.jujugui.org:443/ws/"
  modelName="test1"
>
  <div
    className="terminal"
  />
</Terminal>
`;
